2011-October-08 Struan Robertson

	* Initial revision of thermodynamic table smoke test.  

2011-September-10 Chris Morley

	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugins/ExponentialDown.cpp,src/plugins/MesmerILT.cpp,
	src/plugins/SimpleILT.cpp: Make the names of the range variables,
	which are displayed during fitting, include the name of the molecule
	or the reaction. Fixes bug #3406422.

2011-September-08 Chris Morley
	* Documentation\Adding a molecule to the library.html: minor update
	
2011-August-18 Struan Robertson

	* DefinedStatesRotor.cpp: Added a new rotor type to deal with 
	specific cases where the states are enumerated explicitly, e.g. 
	the case of the OH radical.  
	* ThermodynamicTable.cpp: Updated to include the specific case
	of temperature = 298.15, for comparison with other tables.
	
2011-August-10 Struan Robertson

	* BeyerSwinehart.cpp: Added a separate implementation of Beyer-Swinehart
	algorithm.  
	* ClassicalRotor.cpp, QMRotor.cpp, MolecularComponents.h/.cpp: 
	Refactored to account for new BeyerSwinehart class.	
	
2011-August-02 Struan Robertson

	* ClassicalRotor.cpp, QMRotor.cpp: Corrected for missing electronic 
	excitation term.
	* Marquardt.cpp: Corrected output statement.	
	
2011-July-31 Struan Robertson

	* ClassicalRotor.cpp, QMRotor.cpp, MolecularComponents.cpp/.h: Initial 
	refactoring of partition function methods as part of improved 
	thermodynamic function calculation.
	
2011-July-17 Struan Robertson

	* Marquardt.cpp, fitting.cpp, FittingUtils.cpp/.h: Refactor of fitting
	methods, utility functions moved to base class.
	
2011-July-16 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Tidying up of goodness of fit test.

2011-July-14 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Initial implementation of goodness 
	of fit test.

2011-July-08 Struan Robertson

	* Marquardt.cpp: Add parameter error estimates.

2011-July-06 Struan Robertson

	* Marquardt.cpp: Tidying up of Marquardt class.