@@ -1,3 +1,8 @@
+2011-October-30 Struan Robertson
+
+	* MolecularComponents.cpp/.h, Molecule.cpp/.h: Tidying up of some 
+	accessor methods and the gDensityOfStates constructor.  
+
 2011-October-08 Struan Robertson
 
 	* Initial revision of thermodynamic table smoke test.  
